initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from d:\BK\HK191\PPL\Assignment1\Principles-Programming-Language\initial\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'do'", "'while'", 
                     "'if'", "'else'", "'for'", "'return'", "'true'", "'false'", 
                     "<INVALID>", "'+'", "'-'", "'/'", "'*'", "'%'", "'&&'", 
                     "'!'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'='", "'boolean'", "'int'", "'void'", "'float'", 
                     "'string'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "<INVALID>", 
                     "','", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "Break", "Continue", "Do", "While", "If", 
                      "Else", "For", "Return", "TRUE", "FALSE", "BooleanLIT", 
                      "ADD", "SUB", "DIV", "MUL", "MOD", "AND", "NOT", "OR", 
                      "EQ", "NOTEQ", "LT", "LEQ", "GT", "GEQ", "ASSIGN", 
                      "BOOLTYPE", "INTTYPE", "VOIDTYPE", "FLOATTYPE", "STRINGTYPE", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "ID", "IntLIT", "LB", 
                      "RB", "LP", "RP", "SEMI", "WS", "COMMA", "LS", "RS", 
                      "FloatLIT", "StringLIT", "LITs", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_array_type = 2
    RULE_element_of_array = 3
    RULE_variable = 4
    RULE_multi_var = 5
    RULE_var_declare = 6
    RULE_input_parameter = 7
    RULE_output_parameter = 8
    RULE_array_point = 9
    RULE_para_declare = 10
    RULE_multi_para = 11
    RULE_expression = 12
    RULE_assoc_expression = 13
    RULE_expression_SB = 14
    RULE_relational_expression = 15
    RULE_equality_expression = 16
    RULE_index_expression = 17
    RULE_invocation_expression = 18
    RULE_list_expression = 19
    RULE_function_call = 20
    RULE_operands = 21
    RULE_declare = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_return_stmt = 25
    RULE_expression_stmt = 26
    RULE_for_stmt = 27
    RULE_block_stmt = 28
    RULE_dowhile_stmt = 29
    RULE_if_stmt = 30
    RULE_stmt = 31
    RULE_statement = 32
    RULE_func_declare = 33
    RULE_primitive_type = 34

    ruleNames =  [ "program", "declaration", "array_type", "element_of_array", 
                   "variable", "multi_var", "var_declare", "input_parameter", 
                   "output_parameter", "array_point", "para_declare", "multi_para", 
                   "expression", "assoc_expression", "expression_SB", "relational_expression", 
                   "equality_expression", "index_expression", "invocation_expression", 
                   "list_expression", "function_call", "operands", "declare", 
                   "break_stmt", "continue_stmt", "return_stmt", "expression_stmt", 
                   "for_stmt", "block_stmt", "dowhile_stmt", "if_stmt", 
                   "stmt", "statement", "func_declare", "primitive_type" ]

    EOF = Token.EOF
    Break=1
    Continue=2
    Do=3
    While=4
    If=5
    Else=6
    For=7
    Return=8
    TRUE=9
    FALSE=10
    BooleanLIT=11
    ADD=12
    SUB=13
    DIV=14
    MUL=15
    MOD=16
    AND=17
    NOT=18
    OR=19
    EQ=20
    NOTEQ=21
    LT=22
    LEQ=23
    GT=24
    GEQ=25
    ASSIGN=26
    BOOLTYPE=27
    INTTYPE=28
    VOIDTYPE=29
    FLOATTYPE=30
    STRINGTYPE=31
    BLOCK_COMMENT=32
    LINE_COMMENT=33
    ID=34
    IntLIT=35
    LB=36
    RB=37
    LP=38
    RP=39
    SEMI=40
    WS=41
    COMMA=42
    LS=43
    RS=44
    FloatLIT=45
    StringLIT=46
    LITs=47
    ERROR_CHAR=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 70
                self.declaration()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_declare(self):
            return self.getTypedRuleContext(MCParser.Func_declareContext,0)


        def var_declare(self):
            return self.getTypedRuleContext(MCParser.Var_declareContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declaration




    def declaration(self):

        localctx = MCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.func_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.var_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def IntLIT(self):
            return self.getToken(MCParser.IntLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_type




    def array_type(self):

        localctx = MCParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.primitive_type()
            self.state = 83
            self.match(MCParser.LS)
            self.state = 84
            self.match(MCParser.IntLIT)
            self.state = 85
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Element_of_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.ID)
            else:
                return self.getToken(MCParser.ID, i)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def IntLIT(self):
            return self.getToken(MCParser.IntLIT, 0)

        def getRuleIndex(self):
            return MCParser.RULE_element_of_array




    def element_of_array(self):

        localctx = MCParser.Element_of_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element_of_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MCParser.ID)
            self.state = 88
            self.match(MCParser.LS)
            self.state = 89
            _la = self._input.LA(1)
            if not(_la==MCParser.ID or _la==MCParser.IntLIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 90
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def IntLIT(self):
            return self.getToken(MCParser.IntLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(MCParser.ID)
                self.state = 93
                self.match(MCParser.LS)
                self.state = 94
                self.match(MCParser.IntLIT)
                self.state = 95
                self.match(MCParser.RS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(MCParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Multi_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_multi_var




    def multi_var(self):

        localctx = MCParser.Multi_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_multi_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.variable()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 100
                self.match(MCParser.COMMA)
                self.state = 101
                self.variable()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def multi_var(self):
            return self.getTypedRuleContext(MCParser.Multi_varContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_declare




    def var_declare(self):

        localctx = MCParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.primitive_type()
            self.state = 108
            self.multi_var()
            self.state = 109
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Input_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_input_parameter




    def input_parameter(self):

        localctx = MCParser.Input_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_input_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.primitive_type()
            self.state = 112
            self.match(MCParser.ID)
            self.state = 113
            self.match(MCParser.LB)
            self.state = 114
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Output_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_output_parameter




    def output_parameter(self):

        localctx = MCParser.Output_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_output_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.primitive_type()
            self.state = 117
            self.match(MCParser.LB)
            self.state = 118
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_pointContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_parameter(self):
            return self.getTypedRuleContext(MCParser.Input_parameterContext,0)


        def output_parameter(self):
            return self.getTypedRuleContext(MCParser.Output_parameterContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_array_point




    def array_point(self):

        localctx = MCParser.Array_pointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_point)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.input_parameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.output_parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_declare




    def para_declare(self):

        localctx = MCParser.Para_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_para_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.primitive_type()
            self.state = 125
            self.match(MCParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LB:
                self.state = 126
                self.match(MCParser.LB)
                self.state = 127
                self.match(MCParser.RB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Multi_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Para_declareContext)
            else:
                return self.getTypedRuleContext(MCParser.Para_declareContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_multi_para




    def multi_para(self):

        localctx = MCParser.Multi_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_multi_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.para_declare()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 131
                self.match(MCParser.COMMA)
                self.state = 132
                self.para_declare()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MCParser.ExpressionContext,i)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def expression_SB(self):
            return self.getTypedRuleContext(MCParser.Expression_SBContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def assoc_expression(self):
            return self.getTypedRuleContext(MCParser.Assoc_expressionContext,0)


        def relational_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Relational_expressionContext)
            else:
                return self.getTypedRuleContext(MCParser.Relational_expressionContext,i)


        def LT(self):
            return self.getToken(MCParser.LT, 0)

        def LEQ(self):
            return self.getToken(MCParser.LEQ, 0)

        def GT(self):
            return self.getToken(MCParser.GT, 0)

        def GEQ(self):
            return self.getToken(MCParser.GEQ, 0)

        def equality_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Equality_expressionContext)
            else:
                return self.getTypedRuleContext(MCParser.Equality_expressionContext,i)


        def EQ(self):
            return self.getToken(MCParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(MCParser.NOTEQ, 0)

        def operands(self):
            return self.getTypedRuleContext(MCParser.OperandsContext,0)


        def AND(self):
            return self.getToken(MCParser.AND, 0)

        def OR(self):
            return self.getToken(MCParser.OR, 0)

        def ASSIGN(self):
            return self.getToken(MCParser.ASSIGN, 0)

        def getRuleIndex(self):
            return MCParser.RULE_expression



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(MCParser.LB)
                self.state = 140
                self.expression(0)
                self.state = 141
                self.match(MCParser.RB)
                pass

            elif la_ == 2:
                self.state = 143
                self.expression_SB(0)
                self.state = 144
                _la = self._input.LA(1)
                if not(_la==MCParser.LS or _la==MCParser.RS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.state = 146
                self.assoc_expression(0)
                pass

            elif la_ == 4:
                self.state = 147
                self.relational_expression(0)
                self.state = 148
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.LT) | (1 << MCParser.LEQ) | (1 << MCParser.GT) | (1 << MCParser.GEQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 149
                self.relational_expression(0)
                pass

            elif la_ == 5:
                self.state = 151
                self.equality_expression(0)
                self.state = 152
                _la = self._input.LA(1)
                if not(_la==MCParser.EQ or _la==MCParser.NOTEQ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 153
                self.equality_expression(0)
                pass

            elif la_ == 6:
                self.state = 155
                self.operands()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 172
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = MCParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 158
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 159
                        self.match(MCParser.AND)
                        self.state = 160
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = MCParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 161
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 162
                        self.match(MCParser.OR)
                        self.state = 163
                        self.expression(4)
                        pass

                    elif la_ == 3:
                        localctx = MCParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 164
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 165
                        self.match(MCParser.ASSIGN)
                        self.state = 166
                        self.expression(2)
                        pass

                    elif la_ == 4:
                        localctx = MCParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 167
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 168
                        self.match(MCParser.LS)
                        self.state = 169
                        self.expression(0)
                        self.state = 170
                        self.match(MCParser.RS)
                        pass

             
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Assoc_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def expression(self):
            return self.getTypedRuleContext(MCParser.ExpressionContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def assoc_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Assoc_expressionContext)
            else:
                return self.getTypedRuleContext(MCParser.Assoc_expressionContext,i)
